--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 </head>
 <body>
     <h1>Hello World!</h1>
-    <p>I'm Leonardo Selmini and this is the first Boolean Careers Academy's exercise</p>
+    <p>I'm <em>Leonardo Selmini</em> and this is the first <em>Boolean Careers Academy</em>'s exercise</p>
 </body>
 </html>
