--- a/index.html
+++ b/index.html
@@ -1,13 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hello World</title>
-</head>
-<body>
-    <h1>Hello World!</h1>
-    <p>I'm <em>Leonardo Selmini</em> and this is the first <em>Boolean Careers Academy</em>'s exercise</p>
-</body>
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Hello World</title>
+    </head>
+    <body>
+        <header>    
+            <div>
+                <h1>Hello World!</h1>
+                <p>I'm <b>Leonardo Selmini</b> and this is the first <b>Boolean Careers Academy</b>'s exercise</p>
+            </div>
+        </header>
+        <footer>
+            <p><em>Made with love by LS</em></p>
+        </footer>    
+    </body>
 </html>
